option optimize_for = LITE_RUNTIME;

package pb;

import public "user.proto";
import public "category.proto";
import public "package.proto";
import public "parameters.proto";
import public "common.proto";

message ItemReq{
    oneof action{
      Add add = 2;
      Remove remove = 5;
      Modify modify = 6;
      Get get = 7;
    }

    message Add{
        required string name = 1;
        optional string symbol = 2;
        optional bool is_private = 3 [default=true];
        optional string description = 4;
        required uint32 category_id = 5;

        repeated pb.ParameterValue parameters = 6;

        optional bool returning_id = 7 [default = false];
    }

    message Remove {
//        required int32 id = 1;
//        optional bool hide = 2;
    }

    message Modify{
//        required int32 id = 1;
//        optional string name = 2;
//        optional string symbol = 3;
//        optional string name_scope = 4;
//        optional string description = 5;
//        repeated ParameterValues parameters = 6;
//        optional pb.Acl acl = 7;
    }

    message Get{
        optional uint32 groupId = 1;
//        optional Limits limits = 10;
    }
}

//message ParameterData{
//    required uint32 id=1;
//    optional pb.Variant stored_data = 2;
//    optional uint32 pointed_data = 3;
//}

message ItemResponse{
    enum Replay{
        OK=1;
        ParameterDontExists = 2;
    }

    optional Replay code = 1;
    optional uint32 id = 2;
}
